RESOLVED FIXED99816
[EFL] Fix failure to access the inspector resources
https://bugs.webkit.org/show_bug.cgi?id=99816
Summary [EFL] Fix failure to access the inspector resources
Seokju Kwon
Reported 2012-10-18 23:54:57 PDT
Fix failure to access the inspector resources.
Attachments
Patch (3.39 KB, patch)
2012-10-18 23:56 PDT, Seokju Kwon
no flags
Patch (3.44 KB, patch)
2012-10-19 00:30 PDT, Seokju Kwon
no flags
Patch (3.89 KB, patch)
2012-10-19 03:39 PDT, Seokju Kwon
no flags
Patch (3.97 KB, patch)
2012-10-21 16:37 PDT, Seokju Kwon
no flags
Seokju Kwon
Comment 1 2012-10-18 23:56:47 PDT
Seokju Kwon
Comment 2 2012-10-19 00:30:29 PDT
Thiago Marcos P. Santos
Comment 3 2012-10-19 02:39:05 PDT
Comment on attachment 169567 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169567&action=review > Source/WebKit/efl/WebCoreSupport/InspectorClientEfl.cpp:147 > - String inspectorFilesPath = "file://" + String(WEB_INSPECTOR_INSTALL_DIR); > + String inspectorFilesPath = ASCIILiteral(WEB_INSPECTOR_INSTALL_DIR); > if (access(inspectorFilesPath.utf8().data(), R_OK)) > - inspectorFilesPath = "file://" + String(WEB_INSPECTOR_DIR); > + inspectorFilesPath = ASCIILiteral(WEB_INSPECTOR_DIR); > > - return inspectorFilesPath; > + return "file://" + inspectorFilesPath; I don't think it is safe to assume ASCII on the install path.
Raphael Kubo da Costa (:rakuco)
Comment 4 2012-10-19 02:44:43 PDT
Comment on attachment 169567 [details] Patch The ChangeLog could be more verbose and explain what kind of failure was going on, and if possible a test for this would also be nice.
Seokju Kwon
Comment 5 2012-10-19 03:34:54 PDT
(In reply to comment #3) > (From update of attachment 169567 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=169567&action=review > > > Source/WebKit/efl/WebCoreSupport/InspectorClientEfl.cpp:147 > > - String inspectorFilesPath = "file://" + String(WEB_INSPECTOR_INSTALL_DIR); > > + String inspectorFilesPath = ASCIILiteral(WEB_INSPECTOR_INSTALL_DIR); > > if (access(inspectorFilesPath.utf8().data(), R_OK)) > > - inspectorFilesPath = "file://" + String(WEB_INSPECTOR_DIR); > > + inspectorFilesPath = ASCIILiteral(WEB_INSPECTOR_DIR); > > > > - return inspectorFilesPath; > > + return "file://" + inspectorFilesPath; > > I don't think it is safe to assume ASCII on the install path. Ok. I will remove it.
Seokju Kwon
Comment 6 2012-10-19 03:35:20 PDT
(In reply to comment #4) > (From update of attachment 169567 [details]) > The ChangeLog could be more verbose and explain what kind of failure was going on, and if possible a test for this would also be nice. I will update the changelog.
Seokju Kwon
Comment 7 2012-10-19 03:39:13 PDT
Thiago Marcos P. Santos
Comment 8 2012-10-19 03:50:11 PDT
Comment on attachment 169591 [details] Patch LGTM.
Raphael Kubo da Costa (:rakuco)
Comment 9 2012-10-19 04:01:34 PDT
Comment on attachment 169591 [details] Patch Looks OK.
WebKit Review Bot
Comment 10 2012-10-19 23:25:55 PDT
Comment on attachment 169591 [details] Patch Rejecting attachment 169591 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit2/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14473265
Seokju Kwon
Comment 11 2012-10-21 16:37:17 PDT
Ryuan Choi
Comment 12 2012-10-21 16:43:49 PDT
Comment on attachment 169816 [details] Patch Make sense. The path may not be ASCII.
WebKit Review Bot
Comment 13 2012-10-21 18:25:30 PDT
Comment on attachment 169816 [details] Patch Clearing flags on attachment: 169816 Committed r132018: <http://trac.webkit.org/changeset/132018>
WebKit Review Bot
Comment 14 2012-10-21 18:25:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.