[EFL] Fix failure to access the inspector resources https://bugs.webkit.org/show_bug.cgi?id=99816

Patch by Seokju Kwon <seokju.kwon@samsung.com> on 2012-10-21
Reviewed by Gyuyoung Kim.

access() returns -1, if path has a file protocol like "file://".
And I have removed it from the first argument of access().
If not, inspectorBaseURL() or inspectorFilesPath() always returns WEB_INSPECTOR_DIR.
Then all layout test related to inspector can fail after installing webkit package.

Source/WebKit/efl:

* WebCoreSupport/InspectorClientEfl.cpp:
(WebCore::InspectorClientEfl::inspectorFilesPath):

Source/WebKit2:

* UIProcess/efl/WebInspectorProxyEfl.cpp:
(WebKit::WebInspectorProxy::inspectorBaseURL):

Canonical link: https://commits.webkit.org/117953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132018 268f45cc-cd09-0410-ab3c-d52691b4dbfc